Fixed apparatus highlighting and line wrapping issues

--- a/sites/all/modules/custom/vm/VersioningMachine/src/vmachine.css
+++ b/sites/all/modules/custom/vm/VersioningMachine/src/vmachine.css
@@ -466,6 +466,7 @@ div.apparatus div.reading{
 div.apparatus{
     display: block;
     cursor: pointer;
+    width: 100%;
 }
 
 em.label{
